--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@ body {
     font-family: spotify-circular,spotify-circular-cyrillic,spotify-circular-arabic,spotify-circular-hebrew,Helvetica Neue,Helvetica,Arial,Hiragino Kaku Gothic Pro,Meiryo,MS Gothic,sans-serif;
 }
 
+#none {
+    display: none;
+}
+
+.spotifyhome{
+    padding-left: 12px;
+    color: white;
+    font-size: 20px;
+}
+
 .clearfix:after {
     content: '';
     display: table;
@@ -53,7 +63,7 @@ header {
 }
 .logocell {
     padding-bottom: 40px;
-    padding-left: 5px;
+    padding-left: 12px;
     display: flex;
     align-items: center;
 }
@@ -66,13 +76,33 @@ header {
 #items {
     display: flex;
     align-items: center;
-    font-size: 14px;
     font-weight: 300;
-    height: 35px;
+    height: 45px;
     border-radius: 8px;
     padding: 0 12px;
     margin: 0 12px 0 0px;
 }
+
+#items2 {
+    display: flex;
+    align-items: center;
+    font-weight: 300;
+    height: 45px;
+    border-radius: 8px;
+    padding: 0 0px;
+    margin: 0 12px 0 0px;
+}
+
+.iconi {
+    background-color: rgba(229,238,255,.3);
+    border-radius: 50%;
+    margin-right: 1rem;
+    width: 1.7143rem;
+    min-width: 1.7143rem;
+    fill: #fff;
+
+}
+
 
 #items:hover {
     background-color: #4c4e54;
@@ -168,9 +198,7 @@ main {
     line-height: .85716rem;
     letter-spacing: .036rem;
     font-weight: 600;
-
 }
-
 
 @media screen and (max-width:875px) {
 
@@ -216,8 +244,13 @@ main {
     .icon-responsive {
         display: block;
     }
-    .text {
+    /* .text {
         display: none;
+    } */
+
+    #items2 {
+        padding-left: 12px;
+
     }
 
     aside {
@@ -229,7 +262,22 @@ main {
         display: flex;
         flex-grow: 1;
         flex-shrink: 0;
+        overflow-y: hidden;
+        overflow-x: hidden;
+        contain: strict;
+    }
+
+    aside:hover {
+        position: relative;
+        width: 200px;
+        float: left;
+        padding-top: 24px;
+        background-color: rgb(36, 37, 40);
+        display: flex;
+        flex-grow: 1;
+        flex-shrink: 0;
         overflow-y: auto;
+        overflow-x: hidden;
         contain: strict;
     }
 
@@ -249,7 +297,6 @@ main {
         padding: 18px 24px 0;
         width: calc(100% - 50px);
         height: 54px;
-        position: fixed;
         background-color: red;
         opacity: 0.5;
 
@@ -262,7 +309,11 @@ main {
     .classnone {
         display: block;
 
+
     }
+
+
+
 
     .navbar-aside {
         width: 100%;
