--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 .container {
     display: flex;
     flex: auto;
-    max-height: 100vh;
+    max-height: 90vh;
     max-width: 100vw;
 }
 
@@ -161,7 +161,7 @@ a {
 main {
     background-color: black;
     float: left;
-    height: 100vh;
+    height: 90vh;
     width: calc(100% - 250px);
     overflow-y: auto;
     display: flex;
@@ -200,6 +200,78 @@ main {
     font-weight: 600;
 }
 
+.mediaplay {
+    float: left;
+    display: flex;
+    flex-shrink: 0;
+    padding: 18px 24px 0;
+    width: 100%;
+    height: 10vh;
+    border-top: 1px solid gray;
+    background-color: black;
+    position: relative;
+}
+
+.borderplayer {
+    opacity: 0;
+    width: 100%;
+    height: 2px;
+    background: chocolate;
+    position: absolute;
+    top: 0;
+    right: 200px;;
+    transition: opacity .15s ease;
+}
+
+.mediaplay:hover .borderplayer {
+    opacity: 1;
+}
+
+.circleplayer {
+    opacity: 0;
+    color: white;
+    position: absolute;
+    top: -8px;
+    right: 195px;
+    transition: opacity 1s ease;
+}
+
+.mediaplay:hover .circleplayer {
+    opacity: 1;
+}
+
+.mediaplay:hover .toolTip--fede {
+    opacity: 1;
+}
+
+.toolTip--fede {
+    position: absolute;
+    top: -35px;
+    right: 180px;
+    pointer-events: none;
+    background-color: #fff;
+    border-radius: 4px;
+    font-weight: 600;
+    color: #101012;
+    padding: 2px 6px;
+    height: 22px;
+    opacity: 0;
+    transition: opacity .33s ease;
+}
+
+.flexfooter {
+    display: flex;
+    padding-top: 96px;
+}
+
+.leftcolumn {
+    width: 33%;
+    flex-grow: 3;
+    flex-shrink: 1;
+    flex-basis: 0%;
+    min-width: 150px;
+}
+
 @media screen and (max-width:875px) {
 
 
@@ -219,7 +291,7 @@ main {
     main {
         background-color: black;
         float: left;
-        height: 100vh;
+        height: 90vh;
         width: calc(100% - 200px);
         overflow-y: auto;
         display: flex;
@@ -228,7 +300,6 @@ main {
     .navigationbarrow {
         float: left;
         display: flex;
-
         flex-shrink: 0;
         padding: 18px 24px 0;
         width: calc(100% - 200px);
@@ -284,7 +355,7 @@ main {
     main {
         background-color: black;
         float: left;
-        height: 100vh;
+        height: 90vh;
         width: calc(100% - 50px);
         overflow-y: auto;
         display: flex;
