--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
     font-family: spotify-circular,spotify-circular-cyrillic,spotify-circular-arabic,spotify-circular-hebrew,Helvetica Neue,Helvetica,Arial,Hiragino Kaku Gothic Pro,Meiryo,MS Gothic,sans-serif;
     overflow-x: hidden;
+
 }
 
 #none {
@@ -217,18 +218,98 @@ main {
     height: calc(100vh - 100px);
     width: calc(100% - 250px);
     overflow-y: auto;
-    display: flex;
     overflow-x: hidden;
 }
 
 .contentmain {
-    display: flex;
-    padding-top: 60px;
+    padding-top: 70px;
+    padding-left: 24px;
 }
 
-h1 {
-    color: white;
+.itemcontainer {
+    display: flex;
+    flex-direction: column;
+    padding-left: 24px;
+    padding-top: 20px;
 }
+
+.containeritem2 {
+    display: flex;
+}
+
+.itemcontainer-1 {
+    width: 320px;
+    margin-right: 15px;
+}
+
+.image1 img{
+    height: 232px;
+    width: 320px;
+    display: flex;
+}
+
+.image1 {
+    width: 100%;
+}
+
+.descrizioni {
+    width: 320px;
+    height: 100px;
+    padding-left: 20px;
+    padding-top: 20px;
+    background-image: url(https://resources.tidal.com/images/47348ca1/f6db/43f2/bad9/80ad90e49de7/1100x800.jpg);
+    display: flex;
+    flex-direction: column;
+}
+
+.descrizioni2 {
+    width: 320px;
+    height: 100px;
+    padding-left: 20px;
+    padding-top: 20px;
+    background-image: url(https://resources.tidal.com/images/bbfc1f14/f1f1/49b5/bbd8/9a72b7e03a6e/1100x800.jpg);
+    display: flex;
+    flex-direction: column;
+}
+
+.descrizioni3 {
+    width: 320px;
+    height: 100px;
+    padding-left: 20px;
+    padding-top: 20px;
+    background-image: url(https://resources.tidal.com/images/1f2b4603/0ab5/4f34/a143/19791bd7b214/1100x800.jpg);
+    display: flex;
+    flex-direction: column;
+}
+
+h4 {
+    color: white;
+    display: block;
+}
+
+.playlist_write {
+    color: #00ffff;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.playlist_write2 {
+    color: white;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.playlist_write3 {
+    color: hsla(0,0%,100%,.5);
+    font-weight: 300;
+    font-size: 16px;
+
+}
+
+
+
+
+
 
 /* .icon-noresposive {
     min-width: 1.71432rem;
@@ -273,7 +354,8 @@ h1 {
     width: 100%;
     height: 100px;
     border-top: 1px solid gray;
-    background-color: black;
+    background: #181818;
+    min-width:630px;
     position: relative;
 }
 
