--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,18 @@ main {
     padding-top: 20px;
 }
 
+.itemcontainer2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 24px;
+    padding-top: 20px;
+    overflow-x: auto;
+}
+
+.flexsvg {
+    display: flex;
+}
+
 .containeritem2 {
     display: flex;
 }
@@ -240,6 +252,23 @@ main {
 .itemcontainer-1 {
     width: 320px;
     margin-right: 15px;
+}
+.mixcontainer-2 {
+    width: 170px;
+    margin-right: 15px;
+}
+
+.mixcontiner-1 {
+    width: 170px;
+    display: flex;
+}
+
+.cellmix {
+    height: 170px;
+    width: 170px;
+    display: flex;
+    margin-bottom: 10px;
+    display: flex;
 }
 
 .image1 img{
@@ -268,6 +297,11 @@ main {
     padding-left: 20px;
     padding-top: 20px;
     background-image: url(https://resources.tidal.com/images/bbfc1f14/f1f1/49b5/bbd8/9a72b7e03a6e/1100x800.jpg);
+    display: flex;
+    flex-direction: column;
+}
+
+.descrizionimix {
     display: flex;
     flex-direction: column;
 }
