--- a/css/style.css
+++ b/css/style.css
@@ -249,9 +249,48 @@ main {
     display: flex;
 }
 
+.overlay {
+    display: none
+}
+
+#scrittehover {
+    z-index: 2;
+    color: white;
+}
+
+.pointer:hover .overlay{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+    display: block;
+
+}
+
+.pointer {
+    cursor:pointer;
+    position: relative;
+}
+
+.overlay span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    font-size: 50px;
+    color: white;
+}
+
 .itemcontainer-1 {
     width: 320px;
     margin-right: 15px;
+    transition: all 0.50s ease;
+    position: relative;
+}
+
+.itemcontainer-1:hover {
+    opacity: 0.5;
+
 }
 .mixcontainer-2 {
     width: 170px;
@@ -483,6 +522,8 @@ h4 {
     fill: white;
 }
 
+
+
 .rightcolumn {
     width: 33%;
     display: flex;
@@ -538,6 +579,10 @@ h4 {
     padding-right: 10px;
 }
 
+.containeritemilmegliodelpeggio {
+    display: flex;
+    overflow-x: auto;
+}
 
 .rowrhearts {
     display: flex;
@@ -755,10 +800,40 @@ label {
 
 }
 
+@media screen and (max-width:1060px) {
+    .hifi {
+        display: none;
+    }
+}
+
+@media screen and (max-width:920px) {
+    .musicslider {
+        display: none;
+
+    }
+
+    .musicsliderempty {
+        display: none;
+    }
+
+    .circleplayerbottom {
+        display: none;
+    }
+}
+
 @media screen and (max-width:875px) {
 
-    .container {
+    /* .container {
         overflow-x: hidden;
+    } */
+
+
+    .downartista {
+        display: none
+    }
+
+    .columnartista {
+        justify-content: center;
     }
 
     aside {
@@ -776,9 +851,10 @@ label {
     main {
         background-color: black;
         float: left;
+        height: calc(100vh - 100px);
         width: calc(100% - 200px);
         overflow-y: auto;
-        display: flex;
+        overflow-x: hidden;
     }
 
     .navigationbarrow {
@@ -795,9 +871,17 @@ label {
 }
 @media screen and (max-width:668px) {
 
-    .container {
+    /* .container {
         overflow-x: hidden;
+    } */
+
+    .leftcolumn {
+        display: none;
     }
+
+
+
+
 
     .icon-responsive {
         display: block;
@@ -839,14 +923,25 @@ label {
         contain: strict;
     }
 
+    .containeritemilmegliodelpeggio {
+    display: flex;
+    flex-direction: column;
+    }
+
+    .itemcontainer-1 {
+    width: 320px;
+    margin-right: 15px;
+    margin-bottom: 50px;
+    }
+
     main {
         background-color: black;
         float: left;
+        height: calc(100vh - 100px);
         width: calc(100% - 50px);
-        display: flex;
+        overflow-y: auto;
         overflow-x: hidden;
     }
-
     .navigationbarrow {
         float: left;
         display: flex;
@@ -877,4 +972,28 @@ label {
         flex-direction: column;
     }
 
+    .centercolumn {
+        width:50%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .rightcolumn {
+        width:50%;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+@media screen and (max-width:560px) {
+    .rightcolumn {
+        display: none;
+    }
+
+    .centercolumn {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 }
