--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,11 @@ main {
     opacity: 0.5;
 }
 
+.inplayda {
+    display: flex;
+    flex-direction: column;
+}
+
 .mixcontainer-2 {
     width: 170px;
     margin-right: 15px;
