--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,10 @@ main {
     display: flex;
     margin-bottom: 10px;
     display: flex;
+    transition: all 0.50s ease;
 }
+
+
 
 .image1 img{
     height: 232px;
@@ -641,6 +644,20 @@ label {
 .riproduzioneimg:hover {
     opacity: 0.5;
     transform: scale(1.3);
+}
+
+.cellmix2hover{
+    transition: all 0.5s;
+}
+
+.cellmix2hover:hover {
+    opacity: 0.5;
+    transform: scale(1.1);
+}
+
+.cellmix:hover {
+    opacity: 0.5;
+    transform: scale(1.1);
 }
 
 .riproduzione {
