--- a/css/style.css
+++ b/css/style.css
@@ -635,6 +635,51 @@ label {
     display: block;
 }
 
+.provaoverlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+.provaoverlay:hover {
+    display: block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: -500px;
+  background-color: black;
+  width: 600px;
+  height: 900px;
+  z-index: 2;
+}
+
+.flexfooter:active .dropdown-content {
+  display: block;
+}
+
+
+.player-btn {
+    fill:white;
+    height: 42px;
+    width: 42px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
 .riproduzioneimg {
     position: relative;
     transition: all 0.32s;
